fixed text wrapping issue on title-bar

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -45,7 +45,9 @@
 }
 
 .custom-collection-position {
-  transform: translateX(-20px);
+  // transform: translateX(-20px);
+  white-space: nowrap;
+  width: 100%;
 }
 
 .kanji-badge span {
